--- a/cadastro.css
+++ b/cadastro.css
@@ -46,7 +46,10 @@ span.info{
 .cpf >input{
     margin: 20px;
 }
-
+.nomeC{
+    width: 240px;
+    
+}
 .btn{
     font-size: 18px;
     color: white;
@@ -59,4 +62,23 @@ span.info{
 
 .btn:hover{
     zoom: 105%;
+}
+
+input[type='email']{
+    background-image: url(icons/icons8-mail-64.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 190px;
+}
+
+input[type='password']{
+    background-size: contain;
+    background-image: url(icons/icons8-privacidade-48.png);
+    background-repeat: no-repeat;
+}
+
+input[type='tel']{
+    background-image: url(icons/icons8-telefone-30.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
